Add RSS feed link to bottom of posts

--- a/_layouts/single_post.html
+++ b/_layouts/single_post.html
@@ -20,6 +20,13 @@
                 </section>
             </article>	
 
+            <section class="post__content centered">
+                <div class="subscribe">
+                    <span>Subscribe with RSS</span>
+                    <a href="https://patricklafferty.ca/feed.xml"><img src="/images/feed-icon-28x28.png"></a>
+                </div>
+            </section>
+
             <section>
                 <h1 class="post__header">Comments</h1>
 
