--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,5 @@
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do|Raleway">
 	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+	<link rel="alternate" type="application/rss+xml" href="https://patricklafferty.ca/feed.xml">
 </head>
