--- a/css/main.scss
+++ b/css/main.scss
@@ -106,6 +106,19 @@ a {
 	width: 22rem;
 }
 
+.subscribe {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	width: 60%;
+	height: 1rem;
+}
+
+.centered {
+	display: flex;
+	justify-content: center;
+}
+
 .right {
 	text-align: right;
 }
